k8s-configs/ping-cloud/base/pingaccess/cluster/statefulset.yaml
# This defines the pingaccess admin deployment.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess-admin
  labels:
    cluster: pingaccess-cluster
    role: pingaccess-admin
spec:
  replicas: 1
  serviceName: pingaccess-admin
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      name: pingaccess-admin
      labels:
        cluster: pingaccess-cluster
        role: pingaccess-admin
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccount: ping-serviceaccount
      containers:
      - name: pingaccess
        # FIXME: switch to stable image before GA
        image: pingidentity/pingaccess:1911-alpine-5.3.2
        imagePullPolicy: Always
        resources:
          requests:
            memory: "1.5Gi"
            cpu: "1"
          limits:
            memory: "1.5Gi"
            cpu: "1"
        volumeMounts:
        # FIXME: fix home directory when containers run as non-root user
        - name: ssh-dir
          mountPath: /root/.ssh
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: pingaccess-license
          mountPath: /opt/in/instance/conf/pingaccess.lic
          subPath: pingaccess.lic
        - name: pingaccess-jwk
          mountPath: /opt/in/instance/conf/pa.jwk
          subPath: pa.jwk
        readinessProbe:
          exec:
            command: [ liveness.sh ]
          periodSeconds: 30
          failureThreshold: 10
        livenessProbe:
          exec:
            command: [ liveness.sh ]
          periodSeconds: 30
          failureThreshold: 10
        ports:
        - containerPort: 9000
        - containerPort: 9090
      volumes:
      - name: ssh-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: pingaccess-init
        configMap:
          name: pingaccess-init
          defaultMode: 0555
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: pingaccess-license
        secret:
          secretName: pingaccess-license
          optional: true
          defaultMode: 0400
      - name: pingaccess-passwords
        secret:
          secretName: pingaccess-passwords
          optional: true
          defaultMode: 0400
      - name: pingaccess-jwk
        secret:
          secretName: pingaccess-jwk
          optional: true
          defaultMode: 0400

---

# This defines the pingaccess engine deployment.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess
  labels:
    cluster: pingaccess-cluster
    role: pingaccess-engine
spec:
  replicas: 1
  serviceName: pingaccess
  podManagementPolicy: Parallel
  template:
    metadata:
      name: pingaccess-engine
      labels:
        cluster: pingaccess-cluster
        role: pingaccess-engine
      annotations:
        lastUpdateReason: "NA"
    spec:
      containers:
      - name: pingaccess-engine
        # FIXME: switch to stable image before GA
        image: pingidentity/pingaccess:1911-alpine-5.3.2
        imagePullPolicy: Always
        resources:
          requests:
            memory: "1.5Gi"
            cpu: "1"
          limits:
            memory: "1.5Gi"
            cpu: "1"
        volumeMounts:
        # FIXME: fix home directory when containers run as non-root user
        - name: ssh-dir
          mountPath: /root/.ssh
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: pingaccess-license
          mountPath: /opt/in/instance/conf/pingaccess.lic
          subPath: pingaccess.lic
        - name: pingaccess-jwk
          mountPath: /opt/in/instance/conf/pa.jwk
          subPath: pa.jwk
        - name: pingaccess-pre-stop
          mountPath: /opt/staging/pre-stop.sh
          subPath: pre-stop.sh
        readinessProbe:
          exec:
            command: [ liveness.sh ]
          periodSeconds: 30
          failureThreshold: 10
        livenessProbe:
          exec:
            command: [ liveness.sh ]
          periodSeconds: 30
          failureThreshold: 10
        lifecycle:
          preStop:
            exec:
              command:
              - /opt/staging/pre-stop.sh
        ports:
        - containerPort: 3000
        - containerPort: 3030
      volumes:
      - name: ssh-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: pingaccess-init
        configMap:
          name: pingaccess-init
          defaultMode: 0555
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: pingaccess-license
        secret:
          secretName: pingaccess-license
          optional: true
          defaultMode: 0400
      - name: pingaccess-passwords
        secret:
          secretName: pingaccess-passwords
          optional: true
          defaultMode: 0400
      - name: pingaccess-jwk
        secret:
          secretName: pingaccess-jwk
          optional: true
          defaultMode: 0400
      - name: pingaccess-pre-stop
        configMap:
          name: pingaccess-pre-stop
          defaultMode: 0555
