k8s-configs/ping-cloud/base/pingaccess/cluster/service.yaml
# This service exposes the pingaccess admin, runtime and agent ports to the
# cluster.

apiVersion: v1
kind: Service
metadata:
  name: pingaccess
spec:
  ports:
  - port: 9000
    name: pingaccess-admin
  - port: 9090
    name: pingaccess-cluster

---

# This service exposes the pingaccess runtime engine and agent ports within cluster.

apiVersion: v1
kind: Service
metadata:
  name: pingaccess-engine
spec:
  ports:
    - port: 443
      name: pingaccess-engine
      targetPort: 3000
    - port: 3030
      name: pingaccess-agent
